    * `mongoc_bulk_operation_get_hint` is deprecated for `mongoc_bulk_operation_get_server_id`
    * `mongoc_cursor_set_hint` is deprecated for `mongoc_cursor_set_server_id`
    * `mongoc_cursor_get_hint` is deprecated for `mongoc_cursor_get_server_id`

  * A future minor release plans to drop support for Visual Studio 2013.

libmongoc 1.27.6
================

Fixes:

  * Fix TSan warning.
  * Fix C23 compile.

Improvements:

  * Document expected behavior of command errors in a transaction.

Thanks to everyone who contributed to the development of this release.

  * Adrian Dole
  * Ezra Chung
  * Joshua Siegel
  * Kevin Albertson



libmongoc 1.27.5
================

Fixes:

  * Fix possible build error in environments where `bool` or `_Bool` is a macro.

Thanks to everyone who contributed to the development of this release.

  * Kevin Albertson


libmongoc 1.27.4
================

Fixes:

  * Fix possible crash reading malformed wire protocol message.
  * Fix build with Visual Studio 2013.

Thanks to everyone who contributed to the development of this release.

  * Ezra Chung
  * Kevin Albertson



libmongoc 1.27.3
================

Notes:

  * This patch release introduces changes surrounding the development processes,
    including new code signing and dependency tracking. There are no behavioral
    or API changes.

Fixes:

  * Upgraded bundled Zlib from 1.2.3 to 1.3.1

Thanks to everyone who contributed to the development of this release.

  * Colby Pike



libmongoc 1.27.2
================

Fixes:

  * Close leftover connections to removed servers.

New features:

  * Check environment variable `MONGOC_EXPERIMENTAL_SRV_PREFER_TCP` to prefer TCP for SRV lookup.

Thanks to everyone who contributed to the development of this release.

  * Kevin Albertson



libmongoc 1.27.1
================

No changes since 1.27.0. Version incremented to match the libbson version.

libmongoc 1.27.0
================

Notes:
