@@ -29,7 +29,7 @@ BSON_BEGIN_DECLS
 
 MONGOC_EXPORT (mongoc_stream_t *)
 mongoc_stream_tls_libressl_new (mongoc_stream_t *base_stream, const char *host, mongoc_ssl_opt_t *opt, int client)
-   BSON_GNUC_WARN_UNUSED_RESULT;
+   BSON_GNUC_DEPRECATED BSON_GNUC_WARN_UNUSED_RESULT;
 
 BSON_END_DECLS
 
